--- a/style.css
+++ b/style.css
@@ -48,3 +48,21 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+.image-container {
+    display: flex;
+}
+
+.image-container img {
+    margin: 5px;
+    max-width: 30%; /* Adjust as needed */
+}
+
+.paragraph {
+    margin-bottom: 20px;
+}
+
+.paragraph img {
+    margin: 5px;
+    max-width: 30%; /* Adjust as needed */
+}
