added times page and structure

--- a/style.css
+++ b/style.css
@@ -66,3 +66,19 @@ footer {
     margin: 5px;
     max-width: 30%; /* Adjust as needed */
 }
+
+table {
+    width: 50%;
+    border-collapse: collapse;
+    margin: 20px auto;
+}
+
+th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #f2f2f2;
+}
